# critprop

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  critfunc.h  critprop  main.c~  point.in
