cmake_minimum_required(VERSION 2.8)
project(critprop)
set(critprop_version)
message("${CMAKE_SYSTEM_PROCESSOR}")
set(SOURCE_FILES main.c)
set(HEADER_FILES critfunc.h)
#add_executable(critprop ${SOURCE_FILES} ${HEADER_FILES})
add_executable(critprop ${SOURCE_FILES} ${SOURCE_FILES})
target_link_libraries(critprop -lgsl -lgslcblas -lm)
install(TARGETS critprop DESTINATION bin)
